A few more minor performance improvements to walking dependencies